--- a/index.html
+++ b/index.html
@@ -39,12 +39,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-
-
-
-
-
-
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12">
@@ -57,6 +51,11 @@
 		</div>
 	</div>
 </div>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
 </html>
